# AutomatedReportMaster

./: .dockerignore  .replit  Dockerfile  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
instance/: reports.db
report_generator/: asgi.py  celery.py  settings.py  wsgi.py
reports/: __init__.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
reports/migrations/: 0001_initial.py
static/css/: custom.css
static/js/: main.js
templates/: base.html  login.html  register.html
templates/registration/: login.html  register.html
templates/reports/: dashboard.html  request_report.html
