[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.38",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.0.1",
    "flask-apscheduler>=1.13.1",
    "flask-sqlalchemy>=3.1.1",
    "django>=5.1.6",
    "django-celery-results>=2.5.1",
    "celery[sqlalchemy]>=5.4.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "redis>=5.2.1",
]
